# learn-pcl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ellipse_test.csv  my_functions.cpp  my_functions.h  pcd2txt.txt
11/: 11-bspline_fitting.cpp  11-fitting_curve_2d.cpp  11-greedy_projection.cpp  11-hull_2d.cpp  11-resampling.cpp
_pointclouds_/: 2f.pcd  GS.pcd  bunny_small.pcd  harris_keypoints.pcd  inner_circle_fit.pcd  inner_circle_fit.txt  many_tree.pcd  mapping.yaml  ro.pcd  table_cloud_normals.pcd  table_scene_mug_stereo_textured_hull.pcd
basic/: CMakeLists.txt  addGaussNoise.cpp  addMeanNoise.cpp  coordinate_system.cpp  density_computing.cpp  lidar_pointxyz_2image.cpp  lidar_pointxyzrgb_2image.cpp  pcd_2_text.cpp  pcl_indices.cpp  pcl_indices2.cpp  substract_cloud.cpp  supervoxel_clustering.cpp  supervoxel_clustering2.cpp
basic/kmeans/: kmeans.cpp  kmeans.h  main.cpp  main2.cpp
callback/: 05-color_rendering.cpp  05-display_callback.cpp  05-display_callback2.cpp  05-display_callback3.cpp  05-display_color_control.cpp
compression/: 03-point_cloud_compression.cpp
detect/: CMakeLists.txt  README.md  detect_edge.cpp  detect_edge_by_alpha_shapes.cpp  power_line_segment.cpp
features/: 01-Harris.cpp  01-NARF.cpp  01-pfh.cpp  01-vfh.cpp  10-FPFH.cpp  10-PFH.cpp  10-normal_estimation.cpp  10-normal_estimation_subdest_points.cpp  10-normal_estimation_using_integral_images.cpp  CMakeLists.txt  README.md  narf_keypoint_extraction.cpp
file_operate/: 00-concat_clouds.cpp  00-matrix_transform.cpp  00-openni_grapper.cpp  00-pcd_read.cpp  00-pcd_write.cpp
filter/: 01-My_PassThrough.cpp  02-My_ApproximateVoxelGridFilter.cpp  02-My_VoxelGridFilter.cpp  03-My_StatisticalFilter.cpp  04-My_RadiusFilter.cpp  05-My_ConditionFilter.cpp  05-My_ConditionFilter2.cpp  06-My_ModelFilter.cpp  07-My_ProjectFilter.cpp  07-My_ProjectFilter2.cpp  07-My_ProjectFilter3.cpp  ApproximateVoxelGridFilter.cpp  BilateralFilter.cpp  BilateralFilter02.cpp  CMakeLists.txt  ConditionFilter.cpp  ConditionFilter2.cpp  FPSFilter.cpp  GaussFilter.cpp  MedianFilter.cpp  ModelFilter.cpp  My_BilateralFilter.cpp  My_BilateralFilter02.cpp  My_GuassianFilter.cpp  My_GuassianFilter2.cpp  PassThroughFilter.cpp  ProjectFilter_to_Cylinder.cpp  ProjectFilter_to_Plane.cpp  ProjectFilter_to_Sphere.cpp  README.md  RadiusFilter.cpp  StatisticalFilter.cpp  VoxelGridFilter.cpp  farthest_point_sampling.cpp  farthest_point_sampling_pcl_1_14.cpp  filter_by_curvature_normal.cpp  gauss.cpp  median.cpp  my_fps.cpp  statistical.cpp
fit/: 07-FitLine.cpp  CMakeLists.txt  Neighbourhood.h  fit-Circle_from_cc.cpp  fit_ellipse.cpp
python_algorithms/: DBSCAN.py  LsqEllipse_example.py  PCA.py  clustering3.py  ellipse_test.csv  fit_ellipse.py  modify_field_value.py  sklearn_kmeans copy.py  sklearn_kmeans.py
range_image/: 08-range_image_border_extraction.cpp  08-range_image_creation.cpp
ransac/: 06-random_sample_consensus.cpp
reconstruct/: Alpha_shapes.cpp  Delaunay.cpp  Possion.cpp
registration/: 14_iterative_closest_point.cpp
registration/14.2_increment_registeration/: CMakeLists.txt  incremental_registeration.cpp
registration/14.3_interactive_icp/: CMakeLists.txt  interactive_icp.cpp
registration/14.4_NDT_register/: CMakeLists.txt  normal_distributions_transform.cpp
registration/14.5_刚性物体的鲁棒姿态估计/: CMakeLists.txt  alignment_prerejective.cpp  temp.cpp
search/: My_KdTree01.cpp  My_KdTree02.cpp  My_KdTree_KSearch.cpp
segmentation/: 12-cluster_extraction.cpp  12-cylinder_segmentation.cpp  12-planar_segmentation.cpp  CMakeLists.txt  README.md  don.cpp  euclidean_cluster_seg.cpp  region_grow_seg.cpp  split_by_rho_theta_z.cpp  super_voxel_seg.cpp
tests/: CMakeLists.txt  Test_OMP.cpp  Test_PCA.cpp  test_detect_edge.cpp
visualize/: 05-color_rendering.cpp  CMakeLists.txt  cloud_viewer.cpp  color_rendering.cpp  pcl_visualizer_.cpp  vtk_visualizer.cpp
